# D-li-ne

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md
include/Dline/: core.h
src/: buffer.c  buffer.h  core.c  limit.c  limit.h  memory.c  memory.h  save_load.c  save_load.h  utf8.c  utf8.h
tests/: main.c  public_api.c
